<resources>
    <string name="app_name">GCET ISTE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event">Recent Events</string>
    <string name="title_activity_technica">Technica 15</string>
    <string name="title_activity_technica_tech_event">Tech Events</string>
    <string name="title_activity_mechatrician_event">Mechatrician</string>
    <string name="title_activity_technica_non_tech">NonTech Events</string>
    <string name="mecha_intro">Mechatricians is type of event in which you are going to face a lot of technical terms of mechanical division.</string>
    <string name="tech_rule_1">In this round, simple test of your knowledge about mechanical machinery and tools.</string>
    <string name="tech_rule_2">In this round, there will be race of bots which will be full of excitement and problems as well. Hurdles are to be passed to clear the round.</string>
    <string name="tech_rule_3">This round is surprise round and will be disclosed at the time of competition.</string>
    <string name="tech_round_1">Robots must satisfy the dimensions.</string>
    <string name="tech_dim">25 cm x 25 cm</string>
    <string name="tech_round_2">The robot can be wired or wireless. In case of wireless, participants must take care of selecting suitable bandwidth such that there is no interference.</string>
    <string name="tech_round_3">The robot can be powered by Maximum of 12V DC supply.</string>
    <string name="tech_round_4">Not more than 300 rpm of DC motor is allowed</string>
    <string name="title_activity_scientist_event">Scientist</string>
    <string name="scientist_info">The scientist is type of event in which the participants are tested on the basis of their circuit designing and problem solving skill through various questions and problem statement.</string>
    <string name="tech_tag">\"With sound knowledge of mechanical components and your fast n furious skills, you can crack the two rounds to unveil the surprise.\"</string>
    <string name="scientist_tag">\"Apply your knowledge of circuit analysis and problem solving ability to solve a practical life situation and test your trading skills to achieve top ranks.\"</string>
    <string name="scientist_round_1">This round consists of a MCQ test which will test the participant’s proficiency in circuit analysis, problem solving ability and general aptitude. Top 15 participants will proceed to next round.</string>
    <string name="scientist_round_2">A Storyline will be given to each participant and the requirements of the circuit or system they need to design will be indicated in the story itself. The evaluation of points earned will be on the basis of time taken for designing, working of circuit, response of the circuit. Designing of circuit and its explanation will be handwritten and no hardware implementation will be performed. Top 5 teams will proceed to next round</string>
    <string name="scientist_round_3">From the points earned in last round, the participants will purchase components by trading those points and make a system out of those components. </string>
    <string name="scientist_rule_1">The decision of jury is final and cannot be challenged or questioned in any way.</string>
    <string name="scientist_rule_2">The given objective should be completed in given amount of time, late submission may lead to negative marking.</string>
    <string name="scientist_rule_3">Hints will be provided in round 1 and 2 if required by the participant.</string>
    <string name="scientist_rule_4">The circuit implemented by participants in round 3 will be a take away one (students can take circuit along with them)</string>
    <string name="title_activity_smart_ofast">Smart-O-Fast</string>
    <string name="smart_info">In this event you have to answer general questions, picture perceptions, presentation, etc.  and much more. This event “smart-o-fast “ consist of three rounds. There will be a mixture of technical as well as non technical questions.</string>
    <string name="smart_tag">\"Talking about tall and magnificent buildings, answer some concrete questions, take a sneak peek and enhance presentation skill.\"</string>
    <string name="smart_round_1">In this round you will be given a question paper with 40 questions in it, questions will be there in the form of “multiple choice “, “blanks”.  The contestants will be short listed and will further qualify to 2nd round.</string>
    <string name="smart_round_2">This round will be the buzzer round, the one with the fastest click will be given the first chance to answer. In this round there will be a team of 2 students (1st student of 1st year and 2nd student of 2nd year civil). There would be a negative marking for wrong answer. After this round 5 teams will qualify to 3rd round.</string>
    <string name="smart_round_3">In this round participants will be given a topic related to civil engineering and they have to make a presentation on that topic, your presentation will be evaluated by the respected judges.</string>
    <string name="code_info">Coding...</string>
    <string name="code_tag">\"CODERS, here we bring you e-treasure hunt and present your Wall Street skills to bid and get the best algorithms.\"</string>
    <string name="code_round_1">Solve the Errors in Program and Top 12 teams will qualified for the next round.</string>
    <string name="code_part_1">PART 1(MAZE-O-HUNT)</string>
    <string name="code_part_2">PART 2(BEG BORROW STEAL)</string>
    <string name="code_round_2_1">Every Team Will have to find their task from their respective machines(PC).</string>
    <string name="code_round_2_2">list of things will be given to every team. They have to beg, borrow or steal those things from anywhere in the campus and submit it to respective co-ordinators. The co-ordinator will give a program definition to their respective team and the team will have to perform that program.</string>
    <string name="code_round_3">Virtual money will be provided to each team. One program between two teams and list of algorithms will be given. Team has to bet to earn the algorithm.</string>
    <string name="title_activity_code_storm">CodeStorm</string>
    <string name="code_rule_1">There should be exact two participants in each team.</string>
    <string name="code_rule_2">Team should choose their language of event at the time of registration only.</string>
    <string name="title_activity_counter_event">Counter Strike</string>
    <string name="counter_info">Terrorist v/s Counter Terrorist. Rounds will be according to total registered teams.</string>
    <string name="counter_tag">\"The game of millennium is here..!!  Time for HEADSHOTS, not SELFIES..! Backup your team and strike hard… BAMM..!!\"</string>
    <string name="title_activity_soccer_maniac">Soccer Maniac</string>
    <string name="soccer_info">This event simulates the sport of football with wired robots as on field players and the participant teams. Wired robots will be provided by ISTE team. Two teams will compete at a time. The event is designed as a tournament and each team to lose a game will be eliminated accordingly.</string>
    <string name="soccer_tag">\"All have seen legendary players playing soccer, but ever thought about bots playing the sport..!! Give it a shot…\"</string>
    <string name="soccer_round_1">The first team to score a goal wins. If no team scores a goal, decision will be given on the basis of penalty shootout.</string>
    <string name="soccer_round_2">Each game will be of 5 min duration. If no result comes, winner will be decided from penalty shootout.</string>
    <string name="soccer_rule_1">Decision of referee will be final and cannot be challenged in any way.</string>
    <string name="soccer_rule_2">Any kind of nuisance in field may lead to disqualification of team.</string>
    <string name="soccer_rule_3">Contestants are required to check the robots before starting the match.</string>
    <string name="title_activity_snap_it">Snap It</string>
    <string name="snap_info">Photographer? Come and show your artistic mind by snapping best pics of our ongoing events and get awarded. </string>
    <string name="snap_rule_1">Each participant has to submit 10 best photos(digital copy) which they have clicked.</string>
    <string name="snap_rule_2">Only on-going events or in-campus photos at the time of event will be judged.</string>
    <string name="snap_rule_3">Registration is mandatory for all participants at the begining of the event. Without registration your photos will not be accepted. And registration desk will be at foyer.</string>
    <string name="snap_rule_4">Only one winner will be chosen by judge on basis of creativity.</string>
    <string name="snap_rule_5">Any digital camera model and its accessories are allowed.</string>
    <string name="title_activity_python_workshop">Python Workshop</string>
    <string name="python_info">Python is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code than would be possible in languages such as C++ or Java. The language provides constructs intended to enable clear programs on both a small and large scale.</string>
    <string name="python_speaker">Manoranjan Padhy</string>
    <string name="python_dis">Manoranjan Padhy holds the position of Organizer / Manager at Python Developers, Baroda. He is also the Technical Speaker and Developer Expert for Cloud Services at Google Developers Group, Baroda.</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="name_chairperson">Deep Sangani</string>
    <string name="name_vicechairperson">Axar Lathia</string>
    <string name="name_secretary">Jayraj Desai</string>
    <string name="name_technicalhead_1">Shivansh Shrivastav</string>
    <string name="name_technicalhead_2">Jignesh Talvaniya</string>
    <string name="name_nontechnicalhead">Savan Patel</string>
    <string name="name_designerhead">Shivang Patel</string>
    <string name="name_champaininghead">Rishiraj Brahmbhatt</string>
    <string name="name_volunteerhead">Lakhan Modvadiya</string>
    <string name="name_documentation">Saili Gupta</string>
    <string name="title_activity_about_rec">About Us</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_schedule">scheduleActivity</string>
    <string name="title_activity_table">tableActivity</string>
    <string name="counter_coord_1">Savan Patel</string>
    <string name="counter_coord_2">Amit Ojha</string>
    <string name="counter_coord_1_e">shinepatel95@yahoo.com</string>
    <string name="counter_coord_2_e"></string>
    <string name="mecha_coord_1">Jignesh Talavania</string>
    <string name="mecha_coord_1_e">jigneshtalvania@gmail.com</string>
    <string name="mech_coord_2">Mansi Sutaria</string>
    <string name="mech_coord_2_e">mansi522135@gmail.com</string>
    <string name="sci_coord_1">Shivansh Srivastava</string>
    <string name="sci_coord_1_e">shivansh2524@gmail.com</string>
    <string name="sci_coord_2">Bharat Mundhra</string>
    <string name="sci_coord_2_e">bharatmundhra@gmail.com</string>
    <string name="smart_coord_1">Dhaval Adhesara</string>
    <string name="smart_coord_1_e"></string>
    <string name="smart_coord_2">Arpit Jain</string>
    <string name="smart_coord_2_e">cupidzone001@gmail.com</string>
    <string name="snap_coord_1">Shivang Patel</string>
    <string name="snap_coord_1_e">shivaang14@gmail.com</string>
    <string name="soccer_coord_1">Neha Nair</string>
    <string name="soccer_coord_1_e">nehanair3196@yahoo.com</string>
    <string name="soccer_coord_2">Yash Shah</string>
    <string name="soccer_coord_2_e">ysshah95@gmail.com</string>
    <string name="title_activity_schedule2">Schedule</string>
</resources>